gitlab/gitlab-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-nginx-service
  namespace: devops
spec:
  selector:
    app: nexus-nginx
  ports:
    - name: nexus-nginx
      protocol: TCP
      port: 9999
      targetPort: 9999
