gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: devops
spec:
  selector:
    app: gitlab
  ports:
    - name: gitlab-ui
      protocol: TCP
      port: 6666
      targetPort: 80
