gitlab/gitlab-nginx-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-nginx-ingress-http
  namespace: devops
  labels:
    app: gitlab-nginx
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
spec:
  rules:
    - host: "gitlab.kube.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-nginx-service
                port:
                  number: 9999
