gitlab/gitlab-nginx-ingress-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitlab-nginx-ingress-https
  namespace: devops
  labels:
    app: gitlab-nginx
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`gitlab.kube.local`)
      services:
        - name: gitlab-nginx-service
          port: 8300
  tls:
    passthrough: true
